fixed mobile spacing

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,13 @@
     -ms-transform: translateY(-5px);
     transform: translateY(-5px); } }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; }
+
 body {
   box-sizing: border-box; }
 
